<resources>
    <string name="app_name">Gradison Food</string>
    <string name="delicious_meal">DELICIOUS MEAL</string>
    <string name="get_started">GET STARTED</string>
    <string name="menu">MENU</string>
    <string name="search">Search</string>
    <string name="all">All</string>
    <string name="discount">Today\'s Discount</string>
    <string name="popular">Popular</string>
    <string name="pizza">Pizza</string>
    <string name="price">$ 20</string>
    <string name="home">Home</string>
    <string name="shop">Shop</string>
    <string name="account">Account</string>
</resources>