<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/kPrimary"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/img"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/delicious"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delicious_meal"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btn_get_started"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/get_started"
        android:textSize="15sp"
        android:textStyle="bold"
        android:fontFamily="@font/poppins"
        android:textColor="@color/kPrimary"
        android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
        android:background="@drawable/btn_background"/>

</LinearLayout>