<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="290dp"
    android:layout_gravity="center"
    android:background="@drawable/card_item">

    <ImageView
        android:id="@+id/iv_pic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/img"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/all" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pizza"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="@font/poppins"
        android:textAlignment="center"
        android:layout_marginTop="130dp"
        android:layout_marginStart="30dp"/>

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:layout_marginTop="250dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"/>

    <ImageButton
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/all"
        android:src="@drawable/ic_baseline_add_24"
        android:background="@drawable/add_btn"
        android:layout_marginTop="250dp"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="10dp"/>



</androidx.cardview.widget.CardView>